<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Verification">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="sans-serif-condensed"
                android:padding="@dimen/_5sdp"
                android:text="@string/code"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.MaterialToolbar>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_150sdp"
        android:gravity="center_horizontal"
        android:text="@string/verification"
        android:textAlignment="center"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.chaos.view.PinView
        android:id="@+id/firstPinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_50sdp"
        android:cursorVisible="true"
        android:layout_margin="@dimen/_5sdp"
        android:hint="@string/no"
        android:inputType="number"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/back"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:cursorColor="@color/back"
        app:cursorWidth="@dimen/_1sdp"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="@dimen/_40sdp"
        app:itemRadius="5sp"
        app:itemSpacing="@dimen/_10sdp"
        app:itemWidth="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:lineColor="@color/back"
        app:lineWidth="@dimen/_1sdp"
        app:viewType="rectangle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/next"
        android:textColor="@color/red"
        android:backgroundTint="@color/gray"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <ProgressBar
        android:id="@+id/progress"
        style="@android:style/Widget.ProgressBar"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>