<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="sans-serif-condensed"
                android:padding="@dimen/_5sdp"
                android:text="@string/cred"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.MaterialToolbar>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_65sdp"
        android:layout_margin="@dimen/_5sdp"
        app:boxStrokeColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/first"
            android:maxLines="1"
            android:textColor="@color/back"
            android:textSize="@dimen/_16ssp" />
    </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_margin="@dimen/_5sdp"
                    app:boxStrokeColor="@color/back"
                    app:layout_constraintTop_toBottomOf="@+id/firstLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/last"
                        android:maxLines="1"
                        android:background="@color/white"
                        android:textColor="@color/back"
                        android:textSize="@dimen/_16ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_margin="@dimen/_5sdp"
                    app:boxStrokeColor="@color/white"
                   app:layout_constraintTop_toBottomOf="@+id/lastLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/createEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:maxLines="1"
                        android:background="@color/white"
                        android:textColor="@color/back"
                        android:textSize="@dimen/_16ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/genderLayout"
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:hint="@string/gender"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    app:layout_constraintTop_toBottomOf="@+id/emailLayout">

                    <AutoCompleteTextView
                        android:id="@+id/gender"
                        android:maxLines="1"
                        android:textSize="@dimen/_16ssp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progress"
        style="@android:style/Widget.ProgressBar"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_5sdp"
        android:backgroundTint="@color/gray"
        android:text="@string/create"
        android:textColor="@color/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--        </LinearLayout>-->
<!--    </ScrollView>-->


</androidx.constraintlayout.widget.ConstraintLayout>