<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrganization">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="sans-serif-condensed"
                android:padding="@dimen/_5sdp"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.MaterialToolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:src="@drawable/camera"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_margin="@dimen/_5sdp"
                    app:boxStrokeColor="@color/red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/orName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:hint="@string/orName"
                        android:textColor="@color/back"
                        android:textSize="@dimen/_16ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/desLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_margin="@dimen/_5sdp"
                    app:boxStrokeColor="@color/back"
                    app:layout_constraintTop_toBottomOf="@+id/nameLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/orDesc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:hint="@string/orDes"
                        android:textColor="@color/back"
                        android:textSize="@dimen/_16ssp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contactLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_margin="@dimen/_5sdp"
                    app:boxStrokeColor="@color/back"
                    app:layout_constraintTop_toBottomOf="@+id/desLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/orContact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone"
                        android:background="@color/white"
                        android:hint="@string/orContact"
                        android:textColor="@color/back"
                        android:textSize="@dimen/_16ssp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_margin="@dimen/_5sdp"
                    app:boxStrokeColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/contactLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/orEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:inputType="textEmailAddress"
                        android:hint="@string/orEmail"
                        android:textColor="@color/back"
                        android:textSize="@dimen/_16ssp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/locationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_margin="@dimen/_5sdp"
                    app:boxStrokeColor="@color/back"
                    app:layout_constraintTop_toBottomOf="@+id/emailLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/orLocation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:hint="@string/orLocation"
                        android:textColor="@color/back"
                        android:textSize="@dimen/_16ssp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/statusLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/orStatus"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/locationLayout">

                    <AutoCompleteTextView
                        android:id="@+id/orStatus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:maxLines="1"
                        android:textSize="@dimen/_16ssp"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>


                <ProgressBar
                    android:id="@+id/progress"
                    style="@android:style/Widget.ProgressBar"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    app:layout_constraintBottom_toTopOf="@+id/create"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/create"
                    android:textColor="@color/back"
                    app:layout_constraintTop_toBottomOf="@+id/statusLayout" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@+id/create"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>